# aria2-mcp-rs

./: .env.enc  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  Taskfile.yml  aria2_mcp_state.json  compose.yaml  config.toml.example
.gemini/: setings.json
.gemini/commands/: build-fix.toml  release-summary.toml  release.toml  test-fix.toml  update-deps.toml  update-docs.toml
.github/workflows/: ci.yml  docker.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/add_version_flag_20260220/: index.md  plan.md
conductor/archive/automatic_queue_purging_20260223/: plan.md  spec.md
conductor/archive/bandwidth_scheduler_20260221/: plan.md
conductor/archive/bittorrent_management_20260221/: metadata.json  spec.md
conductor/archive/bulk_manage_downloads_20260221/: index.md  metadata.json  plan.md
conductor/archive/configure_aria2_20260220/: metadata.json
conductor/archive/coverage_90_coveralls_20260220/: plan.md  spec.md
conductor/archive/docker_integration_tests_20260220/: spec.md
conductor/archive/enhanced_search_regex_20260223/: spec.md
conductor/archive/file_organizer_20260221/: index.md  metadata.json
conductor/archive/http_config_refinement_20260221/: index.md  metadata.json
conductor/archive/implement_mcp_prompts_20260221/: metadata.json  spec.md
conductor/archive/implement_mcp_resources_20260221/: metadata.json
conductor/archive/implement_real_time_notifications_20260221/: metadata.json
conductor/archive/implement_sandboxed_filesystem_tools_20260221/: index.md  metadata.json  spec.md
conductor/archive/implement_smart_error_recovery_20260221/: index.md
src/: config.rs  error.rs  lib.rs  main.rs  mcp.rs  state.rs
src/aria2/: mod.rs  notifications.rs  recovery.rs
src/prompts/: diagnose_download.rs  mod.rs  optimize_schedule.rs
src/resources/: active_downloads.rs  global_status.rs  mod.rs  recent_logs.rs  registry.rs
src/server/: handler.rs  mcp.rs  mod.rs  sse.rs  stdio.rs
src/tools/: bulk_manage_downloads.rs  check_health.rs  configure_aria2.rs  inspect_download.rs  list_download_files.rs  manage_all_instances.rs  manage_downloads.rs  manage_torrent.rs  mod.rs  monitor_queue.rs  organize_completed.rs  purge_policy.rs  registry.rs  rss.rs  sandbox.rs  schedule_limits.rs  search_downloads.rs
tests/: aria2_client_tests.rs  aria2_config_tests.rs  aria2_inspection_tests.rs  aria2_management_tests.rs  aria2_monitoring_tests.rs  aria2_tests.rs  aria2_ws_tests.rs  auth_tests.rs  automation_tests.rs  bulk_manage_downloads_tool_tests.rs  check_health_tool_tests.rs  config_log_level_tests.rs  configure_aria2_tool_tests.rs  connection_protocol_tests.rs  docker_integration_test.rs  env_var_comprehensive_tests.rs  error_recovery_tests.rs  jsonrpc_tests.rs  lazy_mode_tests.rs  list_download_files_tool_tests.rs  main_test.rs  manage_all_instances_tool_tests.rs  manage_torrent_tool_tests.rs  mcp_handler_routing_tests.rs  mcp_integration_test.rs  mcp_server_multi_client_tests.rs  monitor_queue_tool_tests.rs  multi_instance_config_tests.rs  notification_integration_tests.rs  organize_completed_tool_tests.rs  prompt_integration_tests.rs  prompt_tests.rs  purge_background_tests.rs  purge_tool_tests.rs  recovery_integration_tests.rs  resource_integration_tests.rs  rss_feed_tools_tests.rs  sandbox_tests.rs  schedule_limits_tool_tests.rs  search_downloads_tool_tests.rs  (+5 more)
tests/common/: mod.rs
(+118 files in other folders)
