[package]
name = "aria2-mcp-rs"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Wilde"]
description = "A rust implementation of a aria2 MCP server."
license = "MIT"

[dependencies]
mcp-sdk-rs = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive", "env"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
