[package]
name = "aria2-mcp-rs"
version = "0.1.1"
edition = "2021"
authors = ["Nicholas Wilde"]
description = "A rust implementation of a aria2 MCP server."
license = "MIT"

[dependencies]
mcp-sdk-rs = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive", "env"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "macros"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
config = "0.15.19"
libc = "0.2"
regex = "1.10"
schemars = "1.2.1"
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.26.3"
toml = "0.8"

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization (smaller binary)
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Remove stack unwinding (smaller binary)
strip = true            # Strip symbols (smaller binary)

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI (often slower/buggy in CI cache)
debug = 0               # No debug info needed for basic CI checks (speeds up build)
